Update home.html chỉnh sửa ảnh lần 1

--- a/html/home.html
+++ b/html/home.html
@@ -24,7 +24,7 @@
           <!-- Logo -->
           <div class="d-flex align-items-center gap-2">
             <a href="#" class="d-flex align-items-center text-decoration-none">
-              <img src="/images/abydos.png" alt="Logo" width="50">
+              <img src="../images/abydos.png" alt="Logo" width="50">
               <span class="fw-bold text-primary fs-4 ms-2">HomeTech</span>
             </a>
           </div>
@@ -59,17 +59,17 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <a href="">
-                    <img src="/images/quangcao2.webp" class="d-block w-100" alt="Slide 1">
+                    <img src="../images/quangcao2.webp" class="d-block w-100" alt="Slide 1">
                 </a>
               </div>
               <div class="carousel-item">
                 <a href="">
-                    <img src="/images/quangcao1.webp" class="d-block w-100" alt="Slide 2">
+                    <img src="../images/quangcao1.webp" class="d-block w-100" alt="Slide 2">
                 </a>
               </div>
               <div class="carousel-item">
                 <a href="">
-                    <img src="/images/quangcao3.webp" class="d-block w-100" alt="Slide 3">
+                    <img src="../images/quangcao3.webp" class="d-block w-100" alt="Slide 3">
                 </a>
               </div>
               <div class="carousel-item">
@@ -291,9 +291,9 @@
                 <aside>
                     <p><span>Thanh toán: </span>
                         
-                        <img src="/images/momo.png" alt="" width="50px">
-                        <img src="/images/jcb.png" alt="" width="50px">
-                        <img src="/images/visa2.png" alt="" width="50px">
+                        <img src="../images/momo.png" alt="" width="50px">
+                        <img src="../images/jcb.png" alt="" width="50px">
+                        <img src="../images/visa2.png" alt="" width="50px">
                     </p>
                 </aside>
             </div>
