--- a/html/gioHang.html
+++ b/html/gioHang.html
@@ -15,7 +15,7 @@
   <header>
     <div class="header-logo">
       <a href="home.html">
-        <img src="/images/abydos.png" alt="Logo" width="50">
+        <img src="../images/abydos.png" alt="Logo" width="50">
         <span>HomeTech</span>
       </a>
     </div>
