--- a/html/danhSachSP.html
+++ b/html/danhSachSP.html
@@ -26,7 +26,7 @@
         <!-- Logo -->
         <div class="header-logo">
             <a href="home.html" >
-            <img src="/images/abydos.png" alt="Logo" width="50">
+            <img src="../images/abydos.png" alt="Logo" width="50">
             <span>HomeTech</span>
             </a>
         </div>
