--- a/html/home.html
+++ b/html/home.html
@@ -74,7 +74,7 @@
               </div>
               <div class="carousel-item">
                 <a href="">
-                    <img src="/images/quangcao4.webp" class="d-block w-100" alt="Slide 4">
+                    <img src="../images/quangcao4.webp" class="d-block w-100" alt="Slide 4">
                 </a>
               </div>
               <!-- thêm slide khác nếu muốn -->
