--- a/html/home.html
+++ b/html/home.html
@@ -344,6 +344,11 @@
     
           <div class="modal-body">
             <form id="registerForm" novalidate>
+                <div class="mb-3">
+  <label for="regFullName" class="form-label">Họ và tên</label>
+  <input type="text" class="form-control" id="regFullName" placeholder="Nhập họ và tên">
+  <div id="regFullNameError" class="text-danger small mt-1"></div>
+</div>
               <div class="mb-3">
                 
                 <label for="regEmail" class="form-label">Email</label>
